# Personalised-Music-Recommender

./: .env.example  .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt  start.sh
app/: main.py  models.py  routes.py
data/: sample_data.py  spotify_source.py
frontend/: index.html
recommender/: content_based.py
tests/: test_recommender.py
