[project]
name = "music-recommender"
version = "0.1.0"
description = "A music recommendation system with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1.0",
    "scikit-surprise>=1.1.3",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
]
